--- a/package.json
+++ b/package.json
@@ -47,5 +47,17 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.0.1.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pedrodeveloper29/HeroesApp.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pedrodeveloper29/HeroesApp/issues"
+  },
+  "homepage": "https://github.com/pedrodeveloper29/HeroesApp#readme"
 }
